  clear what is FAT/DIR negative recn and what is unsigned recn in signed int.
  FAT traversing seems to be broken (Pexec fails for some files) (joy)
- blkdev.h: retrying in emulator is not necessary (joy)
- blkdev.c: 16-bit recn should work now (joy)

21. Jan. 2002
- in bios/lineainit.c: removed font_ring initialization (MAD)
- re-wrote completely Pexec() for header flags support. I kept the old routine
  for reference, but ultimately it will go away. Fastram is allocated when 
  requested but it is still not freed (the *term routines in proc need to
  be changed as well); Pexec() flag 6 supported. I did not test on Fastram but
  all of autoexec, EmuCON, loading progs from C: and A: work. (LVL)

22. Jan. 2002
- untested ttram-compliant internal memory stuff in proc.c (LVL)
- cleaned up bios/biosmem.c:bmem_init, removed old _b_mdx from startup.S (MAD)
- put diskbuf from startup.S to floppy.c, made dskbufp a pointer (MAD)
- put parallel and serial output funcs from asm to chardev.c (MAD)
- put cpu_init(), cooki_init() and machine_init() to the beginning of the 
  C-startup procedure of bios.c (MAD)
- TT-RAM is added to BDOS memory by calling Maddalt (should be changed) (joy)
- free TT-RAM is displayed in initinfo.c (joy)
- put diskbuf to blkdev.c (MAD)

23. Jan. 2002
- Did move the BCB and bufl_init to bdos/fsbuf.c (MAD)
- updated po/de.po po/fr.po for Fast-RAM texts (MAD)
- did put BPB in bios/blkdev.h (MAD)

25. Jan. 2002
- Did put drvbit stuff into bios/blkdev.c (MAD)
- cleaned up bios/bios.c a bit (MAD)

26. Jan. 2002
- make nodepend does not alter Makefile unnecessarily (faster CVS?) (LVL)
- ramtos reloc address derived automatically (RAMTOS works again) (LVL)
- bdos/pkgmld.c: PF_FASTLOAD implemented, deleted old implementation (LVL)
- bdos/umem.c: has_ttram properly set in Maddalt() (LVL)
- bdos/proc.c: deleted old Pexec implementation (LVL)
- panic() prints on screen if linea is inited (LVL)
- added new BDOS memory functions to doc/status.txt (LVL)